Bug 314351 - %albumartist% placeholder translates to some strange unicode symbol
Summary: %albumartist% placeholder translates to some strange unicode symbol
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collections/Organize Files Dialog (other bugs)
Version First Reported In: 2.7-git
Platform: Debian unstable Linux
: NOR normal
Target Milestone: 2.8
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-03 13:31 UTC by Thierry Göckel
Modified: 2013-02-03 19:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8
Sentry Crash Report:


Attachments
%albumartist% translates weirdly into a unicode symbol in the preview (93.81 KB, image/png)
2013-02-03 13:32 UTC, Thierry Göckel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thierry Göckel 2013-02-03 13:31:24 UTC
Title says it all. I attached a screenshot to further illustrate the issue.

Reproducible: Always
Comment 1 Thierry Göckel 2013-02-03 13:32:02 UTC
Created attachment 76880 [details]
%albumartist% translates weirdly into a unicode symbol in the preview
Comment 2 Ralf Engels 2013-02-03 19:12:29 UTC
Git commit 49ae5b14bd26585704ea90e8fbf21bab8b5eb528 by Ralf Engels.
Committed on 03/02/2013 at 17:42.
Pushed by rengels into branch 'master'.

%albumartist% placeholder translates to some strange unicode symbol
FIXED-IN: 2.8

M  +1    -1    src/dialogs/TrackOrganizer.cpp

http://commits.kde.org/amarok/49ae5b14bd26585704ea90e8fbf21bab8b5eb528