%albumartist% placeholder translates to some strange unicode symbol

BUG: 314351
FIXED-IN: 2.8